# dippy

./: .gitignore  Untitled-1.py  heartbeat.py  pyproject.toml
dippy/: __init__.py  bot.py  configuration.py  gate.py  ice.py  payload.py  shard.py
dippy/orm/: __init__.py  base.py  generic.py  heartbeat.py  lazy.py  orm.py  payload.py
dippy/utils/: hooks.py
tests/: heartbeat.py
