[tool.poetry]
name = "dippy"
version = "0.1.0"
description = ""
authors = [
    "nanananisore <Muuttsu@gmail.com>"
]
license = "MIT"

readme = "README.md"

repository = "https://github.com/nanananisore/dippy.git"

keywords = ["discord","trio","bot","framework"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
