[tool.poetry]
name = "dippy"
version = "0.1.0"
description = ""
authors = [
    "nanananisore <Muuttsu@gmail.com>"
]
license = "MIT"

readme = "README.md"

repository = "https://github.com/nanananisore/dippy.git"

keywords = ["discord","trio","bot","framework"]

[tool.poetry.dependencies]
python = "^3.7"
asks = "^2.3"
trio = "^0.12.1"
trio-websocket = "^0.8.0"
wrapt = "^1.11"
hookt = "^0.1.post2"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
